--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -1,20 +1,19 @@
 \chapter*{Introduction}
 
-Façonnée par des millions d'années d'évolution, la nature présente une incroyable diversité de systèmes qui évoluent et s'adaptent à leur environnement par l'échange, le stockage et le traitement d'information.
-Considérée comme un système computationnel, la nature présente ainsi des capacités de calcul extrêmement performantes et efficaces. La conception de systèmes de calculs bio-inspirés part de ce constat de performance et cherche à implémenter des mécanismes observés dans la nature.
-Cette démarche a fait ses preuves dans de nombreux domaines de l'informatique, en particulier en intelligence artificielle, robotique ou optimisation. Citons par exemple les algorithmes d'optimisation s'inspirant des colonies de fourmis, des essaims d'abeilles, des bancs de poissons ou des chauves-souris, tous ces groupes d'animaux présentant des stratégies de communication efficaces pour accomplir une tâche donnée~\parencite{Darwish2018BioinspiredCA}.
+Façonnée par des millions d'années d'évolution, la nature présente une incroyable diversité de systèmes qui s'adaptent à leur environnement par l'échange, le stockage et le traitement d'information.
+Considérée comme un système computationnel, la nature présente ainsi des capacités de calcul extrêmement performantes et efficaces. La conception de systèmes de calculs bio-inspirés part de ce constat de performance et cherche à implémenter certains mécanismes observés dans la nature.
+La bio-inspiration a fait ses preuves en intelligence artificielle, robotique ou optimisation. De nombreux algorithmes d'optimisation se sont ainsi inspirés des colonies de fourmis, des essaims d'abeilles, des bancs de poissons ou des chauves-souris, tous ces groupes d'animaux présentant des stratégies de communication efficaces pour accomplir une tâche donnée~\parencite{Darwish2018BioinspiredCA}.
 De plus, la recherche en biologie ne cesse d'évoluer, amenant avec elle de nouvelles possibilités d'inspiration biologique.
 
-
-Le cerveau, vu comme un système computationnel, est un des systèmes les plus complexes connus.
-Aussi l'inspiration biologique occupe une place de premier rang dans les débuts de la recherche en intelligence artificielle. Les premiers modèles d'apprentissage s'appuyaient par exemple sur des modèles simplifiés de neurones biologiques, tels que \cite{McCulloch1990ALC} et ont conduit plus tard à la conception du perceptron, à l'origine des réseaux actuels de \emph{Deep Learning}. 
-Les réseaux convolutifs (CNN) \parencite{LeCun1998ConvolutionalNF}, qui ont révolutionné l'apprentissage d'image, se placent également dans une inspiration biologique, s'inspirant de la décomposition du champ visuel et de la hiérarchie de traitement de l'information visuelle observée dans le cerveau.
+Le cerveau, vu comme un système computationnel, est un des systèmes les plus complexes que nous connaissons.
+Aussi l'inspiration biologique occupe une place de premier rang dans la recherche en intelligence artificielle. Les premiers modèles d'apprentissage s'appuyaient par exemple sur des modèles mathématiques simplifiés de neurones biologiques, tels que \cite{McCulloch1990ALC} et ont conduit à la conception du perceptron, à l'origine des réseaux actuels de \emph{Deep Learning}. Les réseaux convolutifs (CNN) \parencite{LeCun1998ConvolutionalNF}, qui ont révolutionné l'apprentissage d'images, se placent également dans une inspiration biologique, s'inspirant de la décomposition du champ visuel et de la hiérarchie de traitement de l'information visuelle observée dans le cerveau.
 
 De nombreux travaux en neurosciences, dont~\cite{binzegger05, Meunier2009HierarchicalMI,sporns_structure_2013,betzel_multi-scale_2017} proposent que le cortex n'est pas hiérarchique, mais une architecture composée de modules auto-organisés.
 Ces modules échangent en continu des informations sensorielles collectées par l'organisme. Ces échanges sont réalisés de façon interne, liant des informations sensorielles et des informations de plus haut niveau provenant de différentes parties du cortex et à différentes échelles spatiotemporelles. 
 Enfin, bien qu'une hiérarchie de traitement de l'information apparaisse entre certains modules, de nombreux circuits de rétroactions semblent présents à différents niveaux de l'architecture.
 Cette propriété de modularité se retrouve dans de nombreux systèmes biologiques \parencite{clune_evolutionary_2013}. Elle présente des avantages en termes de réutilisation, de robustesse aux fautes, de redondance et de traitement local de l'information. Surtout, cette propriété de modularité est à l'origine des comportements collectifs et des structures dynamiques complexes au sein de ces systèmes~\parencite{flake_computational,Siebert2020RoleOM}.
-Dans le cerveau, ces structures dynamiques générées par les interactions entre les neurones semblent être à l'origine de l'apprentissage et la prise de décision. Ces comportements fascinants motivent la création de systèmes de calcul modulaires bio-inspirés, dans une recherche de mécanismes de calcul émergents.
+Dans le cerveau, ces structures dynamiques générées par les interactions entre les neurones semblent être à l'origine de l'apprentissage et la prise de décision. 
+Ces comportements fascinants motivent la création de systèmes de calcul modulaires bio-inspirés, dans une recherche de mécanismes de calcul émergents.
 
 Prenons le temps de définir la modularité d'un point de vue computationnel. 
 Sa définition varie en effet en fonction des disciplines. D'un point de vue des sciences de l'ingénieur, un système modulaire est un système composé de sous-systèmes, les modules, qui peuvent être ajoutés ou supprimés sans impacter la fonction des autres modules.
@@ -25,10 +24,10 @@ Dans cette approche, les modules des architectures sont en interaction continue 
 Le comportement global du système résulte alors de l'interaction entre les modules et non seulement de la somme des comportements des modules pris individuellement~: il s'agit de systèmes complexes.
 Dans cette vision bio-inspirée, la fonction de chaque module n'a de sens que par ses interactions au sein de l'architecture.
 
-La création d'architectures cognitives correspond à cette approche bio-inspirée des architectures modulaires~\parencite{Kotseruba201840YO}. Il s'agit en particulier de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, en s'inspirant des capacités du cerveau.
+La création d'architectures d'apprentissage modulaires, inspirées du cerveau, se retrouve sous le nom d'architectures cognitives~\parencite{Kotseruba201840YO}. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, en s'inspirant des capacités du cerveau.
 Ces architectures cognitives trouvent leur application en robotique autonome.
 L'incorporation de mécanismes d'apprentissage au sein d'agents doit en effet prendre en compte l'aspect temporel et continu du flux de donnée entrant, ce qui appelle à la conception d'architectures d'apprentissage capables de prise de décision autonome.
-\cite{brooks_sumsumption_85} a par exemple exploité cette approche modulaire avec son architecture de \emph{subsumption}. L'auteur propose un système artificiel composé de modules ayant une fonction simple, telle que \og avancer \fg{} ou \og éviter un objet \fg{}. Ces modules sont connectés au sein d'une architecture présentant des rétroactions. Il met en évidence que malgré la simplicité de chacun des modules, le robot est capable d'effectuer des tâches plus complexes, comme explorer son environnement ou suivre une trajectoire tout en évitant les obstacles. Ces tâches de décision émergent de l'interaction des modules simples.
+\cite{brooks_sumsumption_85} a par exemple exploité cette approche modulaire avec l'architecture de \emph{subsumption}. L'auteur propose un système artificiel composé de modules ayant une fonction simple, telle que \og avancer \fg{} ou \og éviter un objet \fg{}. Ces modules sont connectés au sein d'une architecture présentant des rétroactions. Il met en évidence que malgré la simplicité de chacun des modules, le robot est capable d'effectuer des tâches plus complexes, comme explorer son environnement ou suivre une trajectoire tout en évitant les obstacles. Ces tâches de décision émergent de l'interaction des modules simples.
 Dans cet exemple, les modules ont une structure préétablie et sont différenciés. Nous pouvons enfin imaginer des architectures dont les modules sont a priori indifférenciés et interchangeables et vont se spécialiser dans l'architecture au cours d'un l'apprentissage. 
 
 
@@ -36,7 +35,7 @@ Finalement, nous entendons par architecture modulaire d'apprentissage une archit
 Ils communiquent entre eux par une interface bien définie et présentent des boucles de rétroaction, leur conférant un aspect dynamique. Cette interaction est traitée localement au sein des modules, sans supervision par un processus extérieur.
 Nous pensons que cette approche modulaire de l'apprentissage est propice au développement de nouveaux mécanismes émergeant de l'interaction entre les modules.
 
-Dans cette thèse, nous nous intéressons à un modèle d'apprentissage bio-inspiré existant~: les cartes de Kohonen \parencite{Kohonen1982}. Ces modèles d'apprentissage sont caractérisés par leur capacité à représenter des données de façon ordonnée sur un espace de dimension plus faible (typiquement une ou deux dimensions).
+Dans cette thèse, nous nous intéressons à un modèle d'apprentissage bio-inspiré existant~: les cartes de Kohonen \parencite{Kohonen1982}. Ces modèles d'apprentissage non-supervisé sont caractérisés par leur capacité à représenter des données de façon ordonnée sur un espace de dimension plus faible (typiquement une ou deux dimensions).
 L'algorithme d'apprentissage d'une carte auto-organisatrice suit un principe assez simple. Une carte est composée de vecteurs de l'espace d'entrée (prototypes) positionnés sur une grille de faible dimension.
 Ils sont initialement distribués aléatoirement dans l'espace d'entrée. 
 L'apprentissage est réalisé en présentant les entrées une à une à la carte, en trouvant leur \emph{Best Matching Unit} qui est le prototype le plus proche de l'entrée, puis en déplaçant ce prototype ainsi que ses voisins dans la grille vers l'entrée courante.
@@ -54,10 +53,10 @@ L'idée d'architecture modulaire de cartes auto-organisatrices semble donc déco
 (Traduit de \cite{Kohonen1995SelfOrganizingM})
 \end{quote}
 
-Depuis, bien que des travaux aient proposé des architectures hiérarchiques de cartes auto-organisatrices, peu ont cherché à les assembler en architectures modulaires non hiérarchiques.
+Depuis, bien que des travaux aient proposé des architectures hiérarchiques de cartes auto-organisatrices, peu ont cherché à les assembler en architectures modulaires non hiérarchiques. 
+Les travaux réalisés dans notre équipe de recherche se sont attachés à concevoir un modèle d'architecture modulaire exploitant la position du BMU comme interface entre les cartes~\parencite{baheux_towards_2014}.
 
-Nous proposons dans cette thèse de construire une architecture modulaire non hiérarchique de cartes auto-organisatrices.
-Notre démarche est synthétique~: d'abord, nous développons une variante de carte pouvant être assemblée en architecture modulaire, puis nous cherchons expérimentalement à comprendre les comportements qui émergent de l'association des modules.
+Cette thèse poursuit le développement de ce modèle et étudie expérimentalement les comportements qui émergent de l'association des cartes en architecture.
 L'architecture que nous proposons rejoint l'idée d'implémenter des mécanismes liés à la cognition, tels que l'apprentissage non-supervisé, la prise de décision autonome, l'apprentissage associatif de données multimodales et le traitement de données temporelles, s'inspirant du traitement multisensoriel du cerveau humain. 
 Dans cette thèse, nous explorons en particulier la tâche d'apprentissage associatif de données multimodales.
 Il s'agit pour l'architecture d'apprendre des relations existant entre des entrées provenant de différents espaces, en plaçant cet apprentissage de relations à un niveau interne à l'architecture. Le but est d'apprendre à la fois une représentation de chaque espace d'entrée et de leurs relations.
