--- a/05-Indicateur/source.tex
+++ b/05-Indicateur/source.tex
@@ -66,7 +66,7 @@ L'information mutuelle possède notamment les propriétés suivantes~:
 
 L'information mutuelle se calcule également à partir des densités de probabilité pour des variables à valeurs continues de densités de probabilité $p_X$ et $p_Y$~:
 \begin{equation}
-    I(X,Y) = \int_{x \in \Omega_X}\int_{y \in \Omega_Y }{p_{XY}(x,y)\textrm{log}(\frac{p_{XY}(x,y)}{p_X(x)p_Y(y)})dx \: dy}
+    I(X,Y) = \int_{x \in \Omega_X}\int_{y \in \Omega_Y }{p_{XY}(x,y)\textrm{log}(\frac{p_{XY}(x,y)}{p_X(x)p_Y(y)})dy \: dx}
 \end{equation}
 
 Contrairement à l'entropie, la valeur de l'information mutuelle pour des variables continues correspond bien à une limite des valeurs de l'information mutuelle discrète lorsque le nombre de catégories tend vers l'infini \parencite{Cover2005ElementsOI}.
@@ -223,7 +223,7 @@ Le ratio de corrélation $\eta$ se définit à partir de $\varphi$ et mesure alo
    \eta(Y;X) = \frac{Var(\mathbb{E}(Y|X))}{Var(Y)}
 \end{equation}
 
-Une possibilité d'estimation de $\varphi(x)$ est illustré en figure~\ref{fig:cr_box}~: nous discrétiserons les valeurs de $X$ en $n$ valeurs $(x_1, \cdots, x_n)$ et prendrons $\varphi(x_i)$ comme la moyenne des valeurs de $Y$ dans l'intervalle $[x_{i-1}, x_i]$.
+Une façon d'estimer $\varphi(x)$ est illustrée en figure~\ref{fig:cr_box}~: nous discrétiserons les valeurs de $X$ en $n$ valeurs $(x_1, \cdots, x_n)$ et prendrons $\varphi(x_i)$ comme la moyenne des valeurs de $Y$ dans l'intervalle $[x_{i-1}, x_i]$.
 Le ratio de corrélation n'est pas symétrique. Par le fait qu'il est construit sur un rapport, il n'est pas sensible à une transformation linéaire de $Y$ et est sans unité.
 
 \begin{figure}
@@ -255,7 +255,7 @@ Nous reprenons trois exemples de modèles d'entrées tirés du chapitre précéd
     \item Lorsque les entrées sont tirées sur une courbe de Lissajous (Entrées \textbf{D}). $U$ est le paramètre de la courbe.
 \end{itemize}
 
-Nous comparerons les valeurs du ratio de corrélation obtenues dans l'architecture, à celles obtenu dans le cas de deux cartes simples qui prennent $\inpx\m{1}$ ou $\inpx\m{2}$ en entrées. 
+Nous comparerons les valeurs du ratio de corrélation obtenues dans l'architecture, à celles obtenues dans le cas de deux cartes simples qui prennent $\inpx\m{1}$ ou $\inpx\m{2}$ en entrées. 
 Dans ce dernier cas, les cartes ne présentent pas de relation fonctionnelle entre $U$ et $\bmu$.
 
 Nous représentons d'abord le tracé de $U$ selon $\bmu$ dans chaque carte, après apprentissage, en figure~\ref{fig:cr_xp} pour le cercle et en figure \ref{fig:cr_bruit} pour l'anneau. (Voir figure~\ref{fig:u_bmu_lissa} pour la courbe de Lissajous).
