--- a/06b-Analyse-2D/source.tex
+++ b/06b-Analyse-2D/source.tex
@@ -23,9 +23,11 @@ La 1D nous offrait un cadre de représentation facile pour la mise en valeur des
 Cependant, les cartes auto-organisatrices généralement utilisées en pratique sont des cartes en deux dimensions. 
 Alors que des cartes 1D extraient une représentation en 1D de l'espace d'entrée, les cartes 2D ajoutent une dimension de représentation tout en restant relativement peu coûteuses en calculs. 
 
-Nous avons étudié des architectures de deux et trois cartes 1D~; nous nous intéressons dans ce chapitre à des architectures de deux et trois cartes 2D. Le modèle CxSOM tel que présenté au chapitre~\ref{chap:modele} est adapté à des cartes de topologie quelconque. Les expériences que nous présentons ici ne nécessitent pas d'adaptation spécifique de l'algorithme.
-L'objectif de ce chapitre est de présenter comment les comportements d'organisation identifiés sur les cartes en une dimension se généralisent à des cartes en deux dimensions.
+L'objectif de ce chapitre est de présenter comment les comportements d'organisation identifiés sur les cartes CxSOM en une dimension se généralisent à des cartes en deux dimensions.
 Ces exemples nous permettront d'identifier quelques limites et perspectives pour le passage des cartes 1D à 2D dans des architectures CxSOM.
+Nous avons étudié des architectures de deux et trois cartes 1D~; nous nous intéressons dans ce chapitre à des architectures de deux et trois cartes 2D. 
+Le modèle CxSOM tel que présenté au chapitre~\ref{chap:modele} est adapté à des cartes de topologie quelconque. 
+Les expériences que nous présentons ici ne nécessitent pas d'adaptation spécifique de l'algorithme.
 
 \section{Méthode}
 
@@ -108,7 +110,7 @@ En 1D, le rayon $r_c$ détermine la taille des motifs de poids contextuels. Nous
 	\caption{Erreur de quantification vectorielle sur $\inpx\m{1}$ et $\inpx\m{2}$. $\inpx\m{1}|_x$ et $\inpx\m{1}|_y$ représentent les deux composantes de la valeur 2D $\inpx\m{1}$, de même pour $\inpx\m{2}, \w_e(\bmu\m{1})$ et  $\w_e(\bmu\m{2})$. \label{fig:err_2D}}
 \end{figure}
 
-Nous étudions d'abord l'organisation des cartes sur les données tirée sur la sphère, décrite en figure \ref{fig:sphere_inputs}. 
+Nous étudions d'abord l'organisation des cartes sur les données tirées sur la sphère, décrite en figure \ref{fig:sphere_inputs}. 
 Nous prenons dans cette première expérience les rayons de voisinage à $r_c = 0.02$ et $r_e = 0.2$, qui sont les valeurs des paramètres utilisés pour les cartes 1D.
 
 La figure \ref{fig:err_2D} présente l'erreur de quantification vectorielle réalisée sur chaque entrée. Ces tracés montrent que la quantification vectorielle est correctement réalisée dans chaque carte sur l'entrée externe associée.
@@ -199,7 +201,7 @@ Ces grilles mettent en évidence que les poids contextuels ne se sont pas dépli
 Enfin, les dispositions de poids contextuels présentées en figures~\ref{fig:2som_s_002_wc} et \ref{fig:rc_003} apparaissent comme des dispositions stables de poids~; nous avons constaté graphiquement cette stabilité. Au contraire, la configuration présentée en figure~\ref{fig:rc_005} n'est pas une configuration stable. Nous avons observé sur cette expérience une dérive lente des poids contextuels au cours des itérations, qui gardent toutefois une structure générale semblable à celle représentée sur la figure.
 
 Nous pouvons conclure de ces observations préliminaires sur des exemples de cartes en deux dimensions que la formation de motifs de poids contextuels est un mécanisme qu'on retrouve dans des cartes 1D comme des cartes 2D.
-Ces motifs dépendent du rapport entre rayons de voisinage externe et contextuels.
+Ces motifs dépendent du rapport entre rayons de voisinage externe et contextuel.
 Comme sur les cartes 1D, nous observons que les BMU forment des zones sur la carte et se spécialisent pour une valeur du modèle d'entrée et non seulement de l'entrée externe.
 L'aspect 2D apporte beaucoup moins de contraintes sur la forme des zones que sur des cartes en une dimension, diversifiant les motifs de poids contextuels.
 
